Fixed add Guest going off screen

--- a/project/src/app/add-multi-guest/add-multi-guest.component.css
+++ b/project/src/app/add-multi-guest/add-multi-guest.component.css
@@ -21,6 +21,14 @@
     margin-left:15px;
 }
 
+#outterdiv{
+    overflow: auto;
+    height: 50%;
+
+  
+
+}
+
 /*.a0{
     color: red;
 }
